#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem: This files describes release notes for
#       the Acromag ip231 driver and device support.      
#
#  Auth: 29-Aug-2007, Sheng Peng         (PENGS)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
#  Mod:
#        21-Feb-2008, K. Luchini         (LUCHINI):
#          relase ip231-R1-0-5
#        10-Dec-2007, K. Luchini         (LUCHINI):
#          relase ip231-R1-0-4
#        26-Sep-2007, K. Luchini         (LUCHINI):
#          release ip231-R1-0-3
#          release ip231-R1-0-2
#        30-Aug-2007, K. Luchini         (LUCHINI):
#          release ip231-R1-0-1
#
#==============================================================
#
ip231-R1-0-5:   Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                Build with ipac-R2-8-lcls4  
                Replace CONFIG_APP with CONFIG_SITE
                Add RELEASE_SITE  

ip231-R1-0-4:   Backout epics version to bas-R3-14-8-2
                Build with ipac-R2-8-lcls3 w/no hotswap 
                of the hytec 8002 ip carrier

ip231-R1-0-3:   Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                Build with ipac-R2-8-lcls2

ip231-R1-0-2:   Build with base-R3-14-8-2-lcls2 (RTEMS 4.7.1)
                Build with ipac-R2-8-lcls1

ip231-R1-0-1:   Build with ipac-R1-0-2 instead of ipac-R1-0-1
                Built with base-R3-14-8-2-lcls1 (RTEMS 4.7)

ip231-R1-0-0:   Initial release