@@ -21,6 +21,9 @@
 #
 #==============================================================
 #
+R2.2.3-1.4.2    Changing to support some of the git workflow
+                Remove autosave and archive files
+
 ip231-R1-0-5:   Build with base-R3-14-9-lcls1 (RTEMS 4.7.1)
                 Build with ipac-R2-8-lcls4  
                 Replace CONFIG_APP with CONFIG_SITE
